name:                oura-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mrleedev/oura-api#readme
license:             BSD3
license-file:        LICENSE
author:              Lee Meichin
maintainer:          me@mrlee.dev
copyright:           2020 Lee Meichin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , servant-client >= 0.18
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/oura-api
